# Piper

./: .gitignore  CMakeLists.txt  LICENCE  Node.kdev4  Piper.kdev4  README  README.md  main_test.cc
.github/workflows/: ccpp.yml
data/: theme.json
ressources/: resources.qrc  style.qss
src/: Attribute.cc  Attribute.h  AttributeMember.cc  AttributeMember.h  CreatorPopup.cc  CreatorPopup.h  Editor.cc  Editor.h  EditorTab.cc  EditorTab.h  EditorWidget.cc  EditorWidget.h  EditorWidget.ui  Example.cc  Example.h  ExportBackend.h  JsonExport.cc  JsonExport.h  Link.cc  Link.h  MainEditor.cc  MainEditor.h  MainEditor.ui  Node.cc  Node.h  NodeAttribute.cc  NodeAttribute.h  NodeCreator.cc  NodeCreator.h  NodeItem.cc  NodeItem.h  NodePath.cc  NodePath.h  NodeScene.cc  NodeScene.h  NodeView.cc  NodeView.h  PropertyDelegate.cc  PropertyDelegate.h  Scene.cc  (+13 more)
